--- a/Task1__Sparks_by_Shubh_Dholakiya.ipynb
+++ b/Task1__Sparks_by_Shubh_Dholakiya.ipynb
@@ -33,7 +33,15 @@
       },
       "source": [
         "## Prediction using Supervised ML (Task 1)\n",
-        "- Predicting result of Student based on number of hours they study.\n",
+        "- Predicting result of Student based on number of hours they study.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wAoci-lNuljr"
+      },
+      "source": [
         "## Author: Shubh Dholakiya"
       ]
     },
