--- a/CV & IOT/Task_1/TSF_CV_And_IOT_Task_1.ipynb
+++ b/CV & IOT/Task_1/TSF_CV_And_IOT_Task_1.ipynb
@@ -63,7 +63,7 @@
         "import cv2\n",
         "import pytesseract as pt\n",
         "# Setting path\n",
-        "pt.pytesseract.tesseract_cmd = r'/usr/local/bin/pytesseract'"
+        "pt.pytesseract.tesseract_cmd = r'C:\Users\AppData\Local\Tesseract-OCR\tesseract.exe'"
       ],
       "execution_count": null,
       "outputs": []
